# courses-manager

./: .gitignore  CMakeLists.txt  readme.md
include/: course.h  course_actions.h  course_list.h  csv.h  helpers.h
include/structs/: Course.h  CourseList.h  CsvWriteSession.h
src/: course.c  course_actions.c  course_list.c  csv.c  helpers.c  main.c
test/: test.c
